trois-tiers/pg.service.yml
kind: Service
apiVersion: v1
metadata:
  name:  pg-service
spec:
  selector:
    app:  pg
  ports:
  - name:  pg-port
    port:  5432
    targetPort:  5432
